crates/ml2_mem/tests/ui/memenum_unsupported_repr.stderr
error: MemEnum only supports #[repr(iN)] / #[repr(uN)], got `C`
 --> tests/ui/memenum_unsupported_repr.rs:9:6
  |
9 | enum ReprC {
  |      ^^^^^
